tests/fails/f0.t
if not require("fail") then return end
terra foo()
    return a
end
foo()
